--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,4 @@ jobs:
     - uses: actions/setup-python@v5
       with:
         python-version: '3.13' 
-    - run: python -m "import sysconfig;print(sysconfig.get_platform())"
+    - run: python3 -c "import sysconfig;print(sysconfig.get_platform())"
