--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,14 +9,14 @@ jobs:
         with:
           name: pybinding-source
           path: pybinding
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GH_PAT }}
           run-id: 12194329386
 
       - uses: actions/download-artifact@v4
         with:
           pattern: cbinding-library-*
           path: cbinding
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GH_PAT }}
           run-id: 12194329386
 
       - run: |
@@ -32,7 +32,6 @@ jobs:
           uv venv -p 3.13
           uv pip install -r requirements.txt
           uv run scripts/build_ffi.py
-          ls cbinding/cbinding-library-Linux-x86_64
           mv cbinding/cbinding-library-Linux-x86_64/lib/libgitcg.so gitcg && uv run -m build && rm gitcg/libgitcg.*
           uv run wheel --remove --platform-tags=manylinux dist/*any.whl
           mv cbinding/cbinding-library-Windows-x86_64/lib/libgitcg.dll gitcg && uv run -m build && rm gitcg/libgitcg.*
