--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,14 +9,16 @@ jobs:
         with:
           name: pybinding-source
           path: pybinding
-          github-token: ${{ secrets.GH_PAT }}
+          repository: guyutongxue/genius-invokation
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           run-id: 12194329386
 
       - uses: actions/download-artifact@v4
         with:
           pattern: cbinding-library-*
           path: cbinding
-          github-token: ${{ secrets.GH_PAT }}
+          repository: guyutongxue/genius-invokation
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           run-id: 12194329386
 
       - run: |
