--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,7 @@ jobs:
           uv venv -p 3.13
           uv pip install -r requirements.txt
           uv run scripts/build_ffi.py
+          ls mv cbinding/cbinding-library-Linux-x86_64/lib
           mv cbinding/cbinding-library-Linux-x86_64/lib/libgitcg.so gitcg && uv run -m build && rm gitcg/libgitcg.*
           uv run wheel --remove --platform-tags=manylinux dist/*any.whl
           mv cbinding/cbinding-library-Windows-x86_64/lib/libgitcg.dll gitcg && uv run -m build && rm gitcg/libgitcg.*
